feat: many changes

--- a/travel/css/style.css
+++ b/travel/css/style.css
@@ -84,6 +84,7 @@
 
 *, *::before, *::after{
     box-sizing: border-box;
+
 }
 
 html{
@@ -161,6 +162,11 @@ body {
 
 }
 
+.header_mn_link_mobile {
+    display: none;
+}
+
+
 .header_nav {
     font-family: 'Red Hat Text';
     font-weight: 500;
@@ -208,6 +214,8 @@ body {
 .bg_pic {
     width: 1440px;
     height: 765px;
+    /* background-size: cover;
+    max-width: 100%; */
 }
 
 .preview_content {
@@ -381,7 +389,7 @@ body {
 
 /*Destinatios start*/
 .destinations {
-    width: 2520px;
+    width: 1440px;
     height: 1042px;
 }
 
