--- a/travel/css/adaptive.css
+++ b/travel/css/adaptive.css
@@ -23,6 +23,10 @@ body {
     margin-right: 0 auto;
 }
 
+body._lock{
+    overflow: hidden;
+}
+
 /* Header start */
 .header {
     width: 390px;
@@ -34,6 +38,7 @@ body {
     background-color: transparent;
     box-shadow: none;
     opacity: 1;
+    
 }
 .header-logo {
     padding-bottom: 0px;
@@ -70,9 +75,178 @@ body {
 .header_login {
    display: none;
 }
-.header_nav {
-    display: none;
+
+.header_nav_item_mobile {
+    display: block;
 }
+
+.header_nav_item_link_mobile {
+    text-decoration: none;
+    color: white;
+}
+
+.popup_bg {
+    width: 100%;
+    background-color: #0d606f8b;
+    height: 100%;
+    position: absolute;
+    z-index: 2;
+    position: fixed;
+    transform: translateX(150%);
+    transition: transform 0.5s;
+    visibility: hidden;
+
+}
+/* .header_nav {
+    font-family: 'Red Hat Text';
+    font-weight: 500;
+    font-size: 16px;
+    background-color: #F2785C;
+    width: 165px;
+    height: 250px;
+    border-radius: 10px;
+    position: fixed;
+    z-index: 3;
+    top: 90px;
+    right: 20px;
+    transform: translateX(150%);
+    transition: transform 0.5s;
+} */
+
+.popup.active {
+    transform: translateX(0);
+}
+
+.header_nav.active {
+    transform: translateX(0);
+}
+
+.header_nav li + li {
+    margin-top: 12px;
+}
+.header_nav_list {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    left: 100%;
+    top: 0;
+    width: 165px;
+    height: 250px;
+    z-index: 2;
+    align-items: flex-end;
+    list-style-type: none;
+    padding-right: 15px;
+}
+.header_nav_item_link {
+    text-decoration: none;
+    color: white;
+}
+.header_nav a:hover {
+    color: #0D606F;
+    transition: color 0.4s ease;
+}
+
+
+
+
+.header_mn_btn {
+    height: 32px;
+    width: 26px;
+    position: relative;
+    overflow: hidden;
+}
+.header_mn_btn span {
+    width: 26px;
+    height: 2.5px;
+    margin-left: 3px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    background-color: white;
+    transform: translate(-50%, -50%);
+    transition: all 0.5s;
+}
+
+.header_mn_btn span:nth-of-type(2) {
+    top:calc(50% - 7px);
+}
+.header_mn_btn span:nth-of-type(3) {
+    top:calc(50% + 7px);
+}
+
+/* .header_mn_btn.active span:first-of-type {
+    transform: translateX(100%);
+}
+.header_mn_btn.active span:nth-of-type(2) {
+    top: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+}
+.header_mn_btn.active span:nth-of-type(3) {
+    top: 50%;
+    transform: translate(-50%, -50%) rotate(-45deg);
+} */
+
+
+/* .burger_cross {
+    height: 30px;
+    width: 30px;
+    position: relative;
+    display: block;
+} */
+
+.burger {
+    width: 26px;
+    position: relative;
+    display: block;
+    height: 26px;
+    flex-direction: column;
+    align-items: center;
+}
+.cross_block {
+    display: flex;
+    padding-left: 8px;
+    align-items: center;
+    justify-content: flex-start;
+    height: 48px;
+    width: 100%;
+    
+}
+.burger_cross span {
+    width: 18px;
+    border-radius: 2px;
+    height: 1.8px;
+    margin-left: 3px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    background-color: white;
+    transform: translate(-50%, -50%);
+    transition: all 0.5s;
+}
+
+.burger_cross span:nth-of-type(1) {
+    top: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+}
+.burger_cross span:nth-of-type(2) {
+    top: 50%;
+    transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+/* .burger_cross.active span:first-of-type {
+    transform: translateX(100%);
+} */
+/* .burger_cross.active span:nth-of-type(2) {
+    top: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+}
+.burger_cross.active span:nth-of-type(3) {
+    top: 50%;
+    transform: translate(-50%, -50%) rotate(-45deg);
+} */
+
+
+
 .header_mn {
     display: block;
     padding-bottom: 0px;
@@ -88,6 +262,7 @@ body {
     width: 35px;
     height: 32px;
 }
+
 /* Header end */
 
 
@@ -483,7 +658,7 @@ body {
     border-radius: 10px;
     padding-top: 0px;
     -webkit-transition: -webkit-transform .5s ease-in-out;
-    transition:         transform .5s ease-in-out;
+    transition: transform .5s ease-in-out;
     color: white;
     text-decoration: none;
     font-family: 'Red Hat Text';
