--- a/travel/css/style.css
+++ b/travel/css/style.css
@@ -1,153 +1,453 @@
-/* red-hat-text-regular - latin */
-@font-face {
-    font-family: 'Red Hat Text';
-    font-style: normal;
-    font-weight: 400;
-    src: url('../fonts/red-hat-text-v11-latin-regular.eot'); /* IE9 Compat Modes */
-    src: local(''),
-         url('../fonts/red-hat-text-v11-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/red-hat-text-v11-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/red-hat-text-v11-latin-regular.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/red-hat-text-v11-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/red-hat-text-v11-latin-regular.svg#RedHatText') format('svg'); /* Legacy iOS */
-  }
-  
-  /* red-hat-text-500 - latin */
-  @font-face {
-    font-family: 'Red Hat Text';
-    font-style: normal;
-    font-weight: 500;
-    src: url('../fonts/red-hat-text-v11-latin-500.eot'); /* IE9 Compat Modes */
-    src: local(''),
-         url('../fonts/red-hat-text-v11-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/red-hat-text-v11-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/red-hat-text-v11-latin-500.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/red-hat-text-v11-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/red-hat-text-v11-latin-500.svg#RedHatText') format('svg'); /* Legacy iOS */
-  }
-/* aleo-regular - latin */
-@font-face {
-    font-family: 'Aleo';
-    font-style: normal;
-    font-weight: 400;
-    src: url('../fonts/aleo-v11-latin-regular.eot'); /* IE9 Compat Modes */
-    src: local(''),
-         url('../fonts/aleo-v11-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/aleo-v11-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/aleo-v11-latin-regular.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/aleo-v11-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/aleo-v11-latin-regular.svg#Aleo') format('svg'); /* Legacy iOS */
-  }
-  
-  /* aleo-italic - latin */
-  @font-face {
-    font-family: 'Aleo';
-    font-style: italic;
-    font-weight: 400;
-    src: url('../fonts/aleo-v11-latin-italic.eot'); /* IE9 Compat Modes */
-    src: local(''),
-         url('../fonts/aleo-v11-latin-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/aleo-v11-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/aleo-v11-latin-italic.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/aleo-v11-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/aleo-v11-latin-italic.svg#Aleo') format('svg'); /* Legacy iOS */
-  }
-  
-  /* aleo-700 - latin */
-  @font-face {
-    font-family: 'Aleo';
-    font-style: normal;
-    font-weight: 700;
-    src: url('../fonts/aleo-v11-latin-700.eot'); /* IE9 Compat Modes */
-    src: local(''),
-         url('../fonts/aleo-v11-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/aleo-v11-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/aleo-v11-latin-700.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/aleo-v11-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/aleo-v11-latin-700.svg#Aleo') format('svg'); /* Legacy iOS */
-  }
-  
-  /* aleo-700italic - latin */
-  @font-face {
-    font-family: 'Aleo';
-    font-style: italic;
-    font-weight: 700;
-    src: url('../fonts/aleo-v11-latin-700italic.eot'); /* IE9 Compat Modes */
-    src: local(''),
-         url('../fonts/aleo-v11-latin-700italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/aleo-v11-latin-700italic.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/aleo-v11-latin-700italic.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/aleo-v11-latin-700italic.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/aleo-v11-latin-700italic.svg#Aleo') format('svg'); /* Legacy iOS */
-  }
-    
 
+/* _________GENERAL_SETTINGS_________ */
 *, *::before, *::after{
     box-sizing: border-box;
-
+    margin-top: 0;
+    margin-bottom: 0;
 }
-
 html{
     box-sizing: inherit;
     scroll-behavior: smooth;
+    height: 100%;
+    max-height: 3735px;
 }
-
 body {
     font-family: 'Aleo';
     font-weight: 400;
     font-size: 20px;    
-    max-width: 1440px;
-    height: 3735px;
+    width: 100%;
     background-color: white;
-    margin-left: auto;
-    margin-right: auto;
-    /* overflow-x: hidden; */
+    /* height: 100%;
+    max-height: 3735px; */
 }
-
-/* Header start */
-.header {
-    padding-top: 20px;
-    padding-bottom: 25px;
-    box-shadow: 0 0 15px rgba(13,96,111,1.0);
-    background-color: #F2785C;
-    opacity: 0.7;
-    height: 90px;
-    position: absolute;
-    top: 0;
-    left: auto;
-    width: 1440px;
-
+button {
+    cursor: pointer;
+    border: 0px;
+    background: #0D606F;
+    color: white;
+    text-decoration: none;
+    font-family: 'Red Hat Text';
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
 }
-
-.header_logo_pic {
-    margin-left: 0px;
-}
-.header-logo {
-    padding-bottom: 3px;
-    padding-left: 7px;
-}
-
 .wrapper {
-    width: 1221px;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-left: auto;
-    margin-right: auto;
+    width: 83%;
+    margin: 0 auto;
+    position: relative;
 }
 
-.header_wrapper {
+
+
+/* _________HEADER_________ */
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(242, 120, 92, 0.7);
+    box-shadow: 0px 4px 4px rgba(13, 96, 111, 0.5);
+    height: 90px;
+    position: absolute; /* позиционирование относительно .body (формально)*/
+    top: 0px;
+    width: 100%;
+    z-index: 2;
+}
+.header__content {
+    /* width: 100%; */
+    /* height: 100%; */
     display: flex;
     align-items: center;
     justify-content: space-between;
-
+}
+.header__logo-block {
+/* text-align: center; */
+}
+.header__logo-link {
+    text-decoration: none;
+    font-family: 'Aleo';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 32px;
+    color: #FFFFFF;
+    cursor: pointer;
+    white-space: nowrap;
+}
+.header__navigation {
+    width: 527px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.navigation__list {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+    list-style-type: none;
+    font-family: 'Red Hat Text';
+    font-weight: 500;
+    font-size: 16px;
+    width: 100%;
+    padding: 0px;
+}
+.navigation__item {
 
 }
-
-.header_mn {
-    display: none;
+.item-link {
+    text-decoration: none;
+    font-family: 'Red Hat Text';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 21px;
+    color: #FFFFFF;
+    white-space: nowrap;
+}
+.header__login-button {
+    padding-left: 50px;
+}
+.button__login {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 103px;
+    height: 41px;
+    gap: 10px;
+    background: #0D606F;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 2px 3px rgba(13, 96, 111, 0.16);
+    font-family: 'Red Hat Text';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 21px;
+    color: #FFFFFF;
 }
 
 
+
+/* _________MAIN_________ */
+.main {
+    position: relative;
+    top: 0px;
+}
+/* .preview__bg-img {
+    width: 100%;
+    position: absolute;
+    z-index: -10;
+    top: 0px;
+    background-size: cover;
+} */
+.preview__bg-block {
+    background-image: url('../img/preview_background.png');
+    width: 100%;
+    height: auto;
+    background-size: cover;
+    background-position: center center;
+}
+.main__preview {
+    top: 0px;
+    height: 765px;
+    width: 75%;
+    padding-top: 120px;
+    position: relative;
+}
+.preview__title {
+    font-family: 'Aleo';
+    font-weight: bold;
+    font-size: 80px;
+    color: white;
+    line-height: 94px;
+    margin: 0 auto;
+}
+.preview__subtitle {
+    font-family: 'Aleo';
+    font-style: italic;
+    font-weight: 700;
+    font-size: 20px;
+    color: white;
+    margin: 45px auto;
+}
+.preview__search-form {
+    height: 95px;
+    width: 100%;
+    max-width: 892px;
+    min-width: 575px;
+    background: rgba(255, 255, 255, 0.7);
+    border-radius: 16px;
+    display: flex;
+    align-items: center;
+}
+.form__preview {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    /* min-width: 575px; */
+}
+.button__preview-start {
+    height: 59px;
+    min-width: 228px;
+    box-shadow: 0px 0px 3px rgba(13, 96, 111, 0.08), 0px 2px 3px rgba(13, 96, 111, 0.16);
+    font-weight: 500;
+    font-size: 24px;
+    margin: 18px 18px 18px 0px;
+    /* -webkit-transition: -webkit-transform .5s ease-in-out;
+    transition:         transform .5s ease-in-out; */
+}
+/*
+.button__preview-start:hover{
+    transform: scale(1.1);
+} */
+.preview__input-text[type="search"] {
+    font-family: 'Aleo';
+    font-style: italic;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 29px;
+    margin: 0;
+    margin-right: auto;
+    padding: 25px 0px 25px 25px;
+    border: 0;
+    background: rgba(255, 255, 255, 0);
+    min-width: 330px;
+    width: 100%;
+    outline: none;
+}
+.preview__input-text::-webkit-input-placeholder { 
+    color: #F2785C; 
+}
+
+.preview__input-text[type="search"]::-webkit-search-cancel-button {
+    -webkit-appearance: none;
+}
+
+
+
+.main__steps {
+    height: 344px;
+    width: 100%;
+    position: relative;
+}
+.steps__title {
+    font-family: 'Red Hat Text';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 40px;
+    color: #F2785C;
+    margin-top: 80px;
+    margin-bottom: 50px;
+    text-align: center;
+}
+.steps__content {
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+}
+.steps__step {
+    text-align: center;
+}
+.steps__step__space-left {
+    width: 20%;
+}
+.steps__step__space-right {
+    width: 14%;
+}
+.step__text {
+    font-family: 'Aleo';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    color: rgba(13, 96, 111, 1);
+    margin-top: 20px;
+}
+
+
+
+.main__destinations {
+    height: 1024px;
+    width: 100%;
+}
+.destinations__title {
+    font-family: 'Red Hat Text';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 40px;
+    color: #F2785C;
+    text-align: center;
+}
+.steps__button-block {
+    height: auto;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.button__find-more {
+    height: 59px;
+    min-width: 228px;
+    box-shadow: 0px 0px 3px rgba(13, 96, 111, 0.08), 0px 2px 3px rgba(13, 96, 111, 0.16);
+    font-weight: 500;
+    font-size: 24px;
+    /* -webkit-transition: -webkit-transform .5s ease-in-out;
+    transition:         transform .5s ease-in-out; */
+}
+
+
+
+.main__stories {
+    height: 1360px;
+    width: 100%;
+    position: relative;
+    background: rgba(255, 255, 255, 0.6);
+}
+/* .stories__bg-img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -1;
+    top: 90px;
+    background-size: cover;
+} */
+.story__bg-block {
+    background-image: url('../img/stories_background.png');
+    width: 100%;
+    height: auto;
+    background-size: cover;
+    background-position: center center;
+}
+.bg-lighter {
+    background: rgba(255, 255, 255, 0.6);
+    height: 1260px;
+}
+.stories__title {
+    font-family: 'Red Hat Text';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 40px;
+    color: #F2785C;
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 50px;
+}
+.stories__content {
+    height: 1150px;
+    display: flex;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+}
+.stories__story {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: row;
+    height: 250px;
+    gap: 40px;
+    /* overflow: hidden; */
+    /* text-overflow: ellipsis; */
+}
+.story__photo-block {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.story-img {
+    filter: drop-shadow(0px 4px 4px #0D606F);
+    border-radius: 16px;
+    background-size: cover;
+    width: 100%;
+    height: auto;
+}
+.story__text-block {
+    width: 100%;
+    max-width: 760px;
+    /* min-width: 740px; */
+    min-height: 200px;
+    height: 100%;
+}
+.story-title {
+    font-family: 'Aleo';
+    font-weight: 400;
+    font-size: 35px;
+    color: #0D606F;
+    margin-bottom: 28px;
+    line-height: 35px;
+}
+.story-text {
+    margin-bottom: 0px;
+    color: #0D606F;
+    font-family: 'Aleo';
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    text-overflow: ellipsis;
+    overflow-y: scroll;
+    /* white-space: nowrap; */
+    /* min-width: 760px; */
+    max-height: 184px;
+    min-height: 100px;
+    height: 100%;
+    
+}
+
+.story-text::-webkit-scrollbar {
+    width: 0;
+  }
+.story-link {
+    color: #0D606F;
+    font-weight: 700;
+}
+.stories__button-block {
+    height: auto;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.button__see-more {
+    height: 59px;
+    min-width: 228px;
+    box-shadow: 0px 0px 3px rgba(13, 96, 111, 0.08), 0px 2px 3px rgba(13, 96, 111, 0.16);
+    font-weight: 500;
+    font-size: 24px;
+    margin: 0 auto;
+    /* -webkit-transition: -webkit-transform .5s ease-in-out;
+    transition:         transform .5s ease-in-out; */
+}
+
+
+
+/* _________FOOTER_________ */
+.footer {
+    height: 61px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.git-img {
+    background-size: cover;
+}
+.block_link {
+    text-decoration: none;
+}
+.footer__middle-block {
+    color: white;
+    font-family: 'Red Hat Text';
+    font-weight: 500;
+    font-size: 16px;
+}
+.footer__right-block {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 141px;
+}
+
+/* 
 .header_login {
     padding-top: 10px;
     height: 41px;
@@ -170,14 +470,8 @@ body {
 .header_login:hover {
     transform: scale(1.2);
 
-}
-
-/* .header_nav {
-    font-family: 'Red Hat Text';
-    font-weight: 500;
-    font-size: 16px;
 } */
-
+/* 
 .close-x {
     display: none;
 }
@@ -220,32 +514,26 @@ body {
 
 .header_nav_item_mobile {
     display: none;
-}
-/* Header end */
-
-
+} */
 
 
 
 /* Preview start */
-.main {
+/* .main {
 }
 .preview {
     height: 765px;
+    width: 100%;
 }
 
-/* .preview-bg-img {
-    position: relative;
-    z-index: -1;
-} */
 .bg_pic {
-    width: 1440px;
-    height: 765px;
+    width: 100%;
+    background-size: cover;
     /* background-size: cover;
     max-width: 100%; */
-}
+/* }  */
 
-.preview_content {
+/* .preview_content {
     display: flex;
     flex-direction: column;
     margin-top: -647px;
@@ -336,7 +624,7 @@ body {
 
 
 /* Steps start*/
-
+/* 
 .steps {
     margin-bottom: 97px;
 }
@@ -366,8 +654,8 @@ body {
 }
 .steps_list {
     display: flex;
-}
-.step_item_one {
+} */
+/* .step_item_one {
     cursor: url('../img/plane.png'), default;
     display: flex;
     flex-direction: column;
@@ -398,15 +686,15 @@ body {
     width: 100px;
     height: 100px;
     margin-bottom: 30px;
-}
-
+} */
+/* 
 .steps_title {
     margin-left: 283px;
     width: 611px;
     height: 53px;
     margin-bottom: 37px;
 
-}
+}  */
 
 /* Steps end*/
 
@@ -415,7 +703,7 @@ body {
 
 
 /*Destinatios start*/
-.destinations {
+/* .destinations {
     width: 1440px;
     height: 1042px;
 }
@@ -475,7 +763,7 @@ body {
 .arrow{
     margin-left: 27px;
     margin-right: 10px;
-}
+} */
 
 /*Destinatios end*/
 
@@ -485,7 +773,7 @@ body {
 
 /*Stories start*/
 
-.stories {
+/* .stories {
     padding-top: 0px;
     width: 1440px;
     height: 1363px;
@@ -613,7 +901,7 @@ body {
 picture {
     height: 0px;
     width: 0px;
-}
+} */
 /*Stories end*/
 
 
@@ -621,7 +909,7 @@ picture {
 
 
 /* Footer start */
-.footer{
+/* .footer{
     height: 61px;
     width: 1201px;
     margin-top: 40px;   
@@ -729,7 +1017,10 @@ picture {
 
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
-}
+} */
 
 
 /* Footer start */
+
+
+
