--- a/travel/css/style.css
+++ b/travel/css/style.css
@@ -17,8 +17,6 @@ body {
     font-size: 20px;    
     width: 100%;
     background-color: white;
-    /* height: 100%;
-    max-height: 3735px; */
 }
 button {
     cursor: pointer;
@@ -55,14 +53,12 @@ button {
     z-index: 2;
 }
 .header__content {
-    /* width: 100%; */
-    /* height: 100%; */
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 .header__logo-block {
-/* text-align: center; */
+    margin-right: 10px;
 }
 .header__logo-link {
     text-decoration: none;
@@ -106,7 +102,7 @@ button {
     white-space: nowrap;
 }
 .header__login-button {
-    padding-left: 50px;
+    padding-left: 60px;
 }
 .button__login {
     display: flex;
@@ -369,8 +365,12 @@ button {
     margin-left: 30px;
     margin-right: 30px;
 }
-
-
+.swiper-button-prev {
+    display: none !important;
+}
+.swiper-button-next {
+    display: none !important;
+}
 
 
 
@@ -389,7 +389,8 @@ button {
 }
 .bg-lighter {
     background: rgba(255, 255, 255, 0.6);
-    height: 1260px;
+    height: 1270px;
+
 }
 .stories__title {
     font-family: 'Red Hat Text';
@@ -398,31 +399,29 @@ button {
     font-size: 40px;
     color: #F2785C;
     text-align: center;
-    margin-top: 85px;
-    margin-bottom: 50px;
+    margin-top: 83px;
+    margin-bottom: 45px;
 }
 .stories__content {
-    height: 1150px;
+    height: 1170px;
     display: flex;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    align-items: center;
-    justify-content: space-between;
     flex-direction: column;
+    /* justify-content: space-between; */
+    gap: 30px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    
 }
 .stories__story {
+    height: 250px;
     display: flex;
     align-items: flex-start;
-    flex-direction: row;
-    height: 250px;
     gap: 40px;
-    /* overflow: hidden; */
-    /* text-overflow: ellipsis; */
 }
 .story__photo-block {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    height: 250px;
+    width: 100%;
+    max-width: 400px;
 }
 .story-img {
     filter: drop-shadow(0px 4px 4px #0D606F);
@@ -430,39 +429,35 @@ button {
     background-size: cover;
     width: 100%;
     height: auto;
+
 }
 .story__text-block {
     width: 100%;
     max-width: 760px;
-    /* min-width: 740px; */
-    min-height: 200px;
     height: 100%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    text-overflow: ellipsis;
+    overflow-y: scroll;
 }
 .story-title {
     font-family: 'Aleo';
     font-weight: 400;
     font-size: 35px;
     color: #0D606F;
-    margin-bottom: 28px;
     line-height: 35px;
+    margin-bottom: 25px;
+
 }
 .story-text {
-    margin-bottom: 0px;
+    /* margin-bottom: 0px; */
     color: #0D606F;
     font-family: 'Aleo';
     font-weight: 400;
     font-size: 20px;
     line-height: 24px;
-    text-overflow: ellipsis;
-    overflow-y: scroll;
-    /* white-space: nowrap; */
-    /* min-width: 760px; */
-    max-height: 184px;
-    min-height: 100px;
     height: 100%;
-    
 }
-
 .story-text::-webkit-scrollbar {
     width: 0;
   }
@@ -1091,6 +1086,8 @@ picture {
 
 
 /* Footer start */
+
+
 
 
 
