--- a/travel/css/adaptive.css
+++ b/travel/css/adaptive.css
@@ -1,32 +1,83 @@
 .menu__icon {
     display: none;
-    height: 32px;
-    width: 35px;
-    position: relative;
-    z-index: 5;
-    cursor: pointer;
-
 }
-@media (max-width: 1000px) {
+#adaptive_links {
+    display: none !important;
+}
+@media (max-width: 1040px) {
     .menu__icon {
         display: block;
+        height: 32px;
+        width: 35px;
+        position: relative;
+        z-index: 5;
+        cursor: pointer;
+
+    }
+    #menu__icon__span {
+        position: absolute;
+        top: calc(50% - 1.5px);
+        left: 12.5%;
+        right: 12.5%;
+        width: 27px;
+        height: 3px;
+        background: #fff;
+        border-radius: 13px;
+    }
+    #menu__icon__span:first-child {
+        top: 25%;
+    }
+    #menu__icon__span:last-child {
+        top: auto;
+        bottom: 25%;
+        height: 3.5px;
     }
     
+    .header__menu-block {
+        position: relative;
+    }
+    .header__menu {
+        position: absolute;
+        width: 165px;
+        height: 250px;
+        background: #F2785C;
+        box-shadow: 0px 4px 3px rgba(13, 96, 111, 0.25);
+        border-radius: 10px;
+        z-index: 5;
+        right: 100px;
+    }
+    .havigation__list {
+        flex-direction: column;
+    }
+    .header__navigation {
+        position: absolute;
+        width: 106px;
+        height: 176px;
+        right: 15px;
+    }
+    .navigation__list {
+        align-items: flex-end;
+        flex-direction: column;
+        height: 100%;   
+    }
+    .header__login-button {
+        display: none;
+    }
+    .menu__icon__cross-block {
+        width: 100%;
+        height: 46px;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+    }
+    .cross {
+        height: 30px;
+        width: 30px;
+        margin: 8px;
+    }
+
+
 }
-span {
-    position: absolute;
-    top: calc(50% - 1.5px);
-    left: 12.5%;
-    right: 12.5%;
-    width: 27px;
-    height: 3px;
-    background: #fff;
-}
-span:first-child {
-    top: 25%;
-}
-span:last-child {
-    top: auto;
-    bottom: 25%;
-}
+
+
 
