--- a/travel/css/style.css
+++ b/travel/css/style.css
@@ -320,6 +320,7 @@ button {
     width: 100%;
     max-width: 1440px;
     margin: 0 auto;
+    /* z-index: 0 !important; */
 }
 .swiper-wrapper {
     width: 100%;
@@ -346,6 +347,7 @@ button {
 .swiper {
     width: 100%;
     height: 100%;
+    
 }
 .swiper-slide {
     text-align: center;
