--- a/travel/css/style.css
+++ b/travel/css/style.css
@@ -132,6 +132,196 @@ button {
 
 
 
+
+.popup {
+    position: absolute;
+    padding: 25px 45px 25px 45px;
+    /* display: ; */
+}
+@media (max-width: 450px) {
+    .popup {
+        padding: 25px 25px 25px 25px;
+    }
+}
+#login__popup {
+    top: 100px;
+    right: 0px;
+    width: 100%;
+    max-width: 650px;
+    height: 660px;
+    background: linear-gradient(177.09deg, #FFFFFF 6.15%, #0D606F 202.69%);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 16px;
+}
+.popup__body {
+    width: 100%;
+    height: 100%;
+}
+.popup__title {
+    font-family: 'Aleo';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 38px;
+    color: #0D606F;
+    text-align: center;
+    margin-bottom: 30px;
+    white-space: nowrap;
+}
+.sign-btn__fb-block {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    gap: 15px;
+    width: 100%;
+    height: 56px;
+    background: #1877F2;
+    box-shadow: 0px 0px 3px rgba(13, 96, 111, 0.08), 0px 2px 3px rgba(13, 96, 111, 0.16);
+    border-radius: 10px;
+    margin-bottom: 20px;
+    font-family: 'Red Hat Text';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 26px;
+    color: #FFFFFF;
+}
+.sign-btn__gg-block {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    gap: 15px;
+    width: 100%;
+    height: 56px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 3px rgba(13, 96, 111, 0.08), 0px 2px 3px rgba(13, 96, 111, 0.16);
+    border-radius: 10px;
+    font-family: 'Red Hat Text';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 26px;
+    color: #0D606F;
+}
+.or-block {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Aleo';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+    color: rgba(13, 96, 111, 0.5);
+    margin: 30px 0 8px 0;
+    gap: 10px;
+}
+.or-line {
+    width: 50%;
+    height: 0px;
+    border: 1px solid rgba(13, 96, 111, 0.25);
+    background: rgba(13, 96, 111, 0.5);
+}
+.popup__content form {
+    width: 100%;
+}
+
+.form-group-label {
+    font-family: 'Aleo';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #0D606F;
+}
+.form-control.item {
+    width: 100%;
+    height: 54px;
+    background: #FFFFFF;
+    box-shadow: inset 0px 0px 3px rgba(13, 96, 111, 0.08), inset 0px 2px 3px rgba(13, 96, 111, 0.16);
+    border-radius: 10px;
+    border: none;
+    margin-top: 5px;
+}
+.popup__content .item {
+    margin-bottom: 15px;
+    padding: 10px 20px;
+}
+.popup__content .create-account {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 54px;
+    background: #0D606F;
+    box-shadow: 0px 0px 3px rgba(13, 96, 111, 0.08), 0px 2px 3px rgba(13, 96, 111, 0.16);
+    border-radius: 10px;
+    margin: 10px 0 10px 0;
+    font-family: 'Red Hat Text';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 26px;
+    color: #FFFFFF;
+}
+
+.forgot-line {
+    width: 100%;
+    height: 0px;
+    border: 1px solid rgba(13, 96, 111, 0.25);
+    transform: rotate(0.1deg);
+    background: rgba(13, 96, 111, 0.5);
+    margin: 26px 0 20px 0;
+}
+.forgot-link {
+    font-family: 'Aleo';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 18px;
+    text-decoration-line: underline;
+    color: #0D606F;
+    text-shadow: 0px 2px 3px rgba(255, 255, 255, 0.16);
+    text-align: center;
+}
+.register__block {
+    font-family: 'Aleo';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 18px;
+    color: rgba(13, 96, 111, 0.5);
+    text-shadow: 0px 2px 3px rgba(255, 255, 255, 0.16);
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.reg-link {
+    font-family: 'Aleo';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 18px;
+    text-decoration-line: underline;
+    color: #0D606F;
+    text-shadow: 0px 2px 3px rgba(255, 255, 255, 0.16);
+}
+
+
+
+#create__popup {
+    display: none;
+}
+
+
 /* _________MAIN_________ */
 .main {
     position: relative;
@@ -150,7 +340,6 @@ button {
     width: 75%;
     padding-top: 120px;
     position: relative;
-    /* margin: 0 auto; */
     will-change: 100%;
 }
 .preview__title {
