--- a/travel/css/adaptive.css
+++ b/travel/css/adaptive.css
@@ -12,8 +12,18 @@
         position: relative;
         z-index: 30;
         cursor: pointer;
-        
     }
+
+    .helper-icon {
+        width: 35px;
+        height: 100%;
+        /* position: relative; */
+        z-index: 33;
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+
     .menu__icon.active #menu__icon__span{
         transform: scale(0);
     }
@@ -57,13 +67,15 @@
         z-index: 20;
         top: 0;
         right: -100%;
-        /* display: none; */
         transition: all .2s;
+        
     }
-
+    .header__menu-block {
+        
+    }
     .header__menu.active {
         right: 0%;
-        /* display: none; */
+        
     }
     .havigation__list {
         flex-direction: column;
@@ -99,7 +111,7 @@
     }
 
 
-
+ 
 
 
     html{
@@ -140,6 +152,9 @@
     }
     .dark__bg.active {
         display: block;
+        overflow-y: scroll;
+        display: flex;
+        justify-content: center;
     }
 
 
